Fix name overflow in match container

--- a/src/style.scss
+++ b/src/style.scss
@@ -277,6 +277,7 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
+      width: 80%;
 
       &.hint {
         color: var(--hint-color);
